--- a/.github/workflows/waka_readme_stats.yml
+++ b/.github/workflows/waka_readme_stats.yml
@@ -17,5 +17,6 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           SHOW_LINES_OF_CODE: "true"
           SHOW_SHORT_INFOSHOW_SHORT_INFO: "true"
+          SHOW_TOTAL_CODE_TIME: "true"
           LOCALE: "id"
           
